<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DetailTvshowActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detail_activity_tv_ivposter"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="@drawable/background_activity"
            android:contentDescription="@string/poster"
            android:scaleType="fitCenter"
            android:src="@drawable/poster_spiderman"
            app:layout_constraintBottom_toTopOf="@id/detail_activity_tv_tvtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_activity_tv_tvtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/poster"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/detail_activity_tv_tvrated"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_activity_tv_ivposter" />

        <TextView
            android:id="@+id/detail_activity_tv_tvrated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rate_8_8"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/detail_activity_tv_garis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_activity_tv_tvtitle" />

        <View
            android:id="@+id/detail_activity_tv_garis"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#000000"
            app:layout_constraintBottom_toTopOf="@id/detail_activity_tv_tvoverview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_activity_tv_tvrated" />

        <TextView
            android:id="@+id/detail_activity_tv_tvoverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/overview"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/detail_activity_tv_tvdesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_activity_tv_garis" />

        <TextView
            android:id="@+id/detail_activity_tv_tvdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_activity_tv_tvoverview" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>